# ConfigFuzz

./: .gitignore  README.md  configfind.py  configtree.py  linecount.py  linedistributioncount.py  parseLineNumTotal.py  patch_config_analysis.py  patch_config_overlap.py  undertaker.sh  undertakerParser.py
Kconfiglib/: kconfiglib.py  makefile.patch
Kconfiglib/examples/: print_tree.py
SyzDirect/: PLAN.md
SyzDirect/source/syzdirect/: Config.py  patched_kcov.h
SyzDirect/source/syzdirect/Runner/: Compilation.py  Config.py  Main.py  config.yaml
SyzDirect/source/syzdirect/Runner/SyscallAnalyze/: InterfaceGenerate.py  SyscallAnalyze.py  TargetPointAnalyze.py
SyzDirect/source/syzdirect/syzdirect_function_model/: Makefile
SyzDirect/source/syzdirect/syzdirect_function_model/src/lib/: Analyzer.cc  CMakeLists.txt  Utils.cc
SyzDirect/source/syzdirect/syzdirect_function_model_bak/: Makefile
SyzDirect/source/syzdirect/syzdirect_function_model_bak/src/lib/: Analyzer.cc  CMakeLists.txt
SyzDirect/source/syzdirect/syzdirect_kernel_analysis/: Makefile
SyzDirect/source/syzdirect/test_clang_plugin/: Makefile
SyzDirect/source/syzdirect/test_clang_plugin/src/: CMakeLists.txt
SyzDirect/source/syzdirect/test_clang_plugin/src/lib_jsoncpp/: CMakeLists.txt  ConfigParser.cc  ConfigParser.h
data-6.15.0/: 6.15.0-statistics.txt  config_linenum.json  config_tree.json
